# rust-fullstack-app

./: .gitignore  Cargo.toml
backend/: Cargo.toml
backend/src/: main.rs
backend/src/api/: log.rs
backend/src/repository/: mod.rs  repo.rs
common/: Cargo.toml
common/src/model/: support_request.rs
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: lib.rs  main.rs
frontend/src/components/atoms/: text_input.rs
