[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path = "../common"}
actix-web = "4.1.0"
actix-web-lab ="0.17.0"
uuid = { version = "1.1.2", features = ["v4"] }
serde = { version= "1", features = ["derive"]}
env_logger = "0.9.0"
log = "0.4.17"
strum_macros = "0.24.3"
strum = {version="0.24.1", features = ["derive"]}
dotenv = "0.15.0"
diesel = { version = "1.4.8", features=["postgres"] }
diesel_codegen = { version = "", features= ["postgres"] }



