[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path = "../common"}
yew = "0.19.3"
stylist = {version="0.10.1", features=["yew"]}
gloo = "0.8.0"
wasm-bindgen = "0.2.82"
web-sys = {version="0.3.59", features=["HtmlInputElement", "HtmlSelectElement", "HtmlTextAreaElement"]}
yew-router = "0.16.0"
serde = "1.0.144"
serde_json = "1.0.85"
reqwasm = "0.5.0"
wasm-bindgen-futures = "0.4.32"

